--- a/Observer_WeatherStationObserverable/pom.xml
+++ b/Observer_WeatherStationObserverable/pom.xml
@@ -8,8 +8,10 @@
 		<artifactId>GOF</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>Strategy</artifactId>
-	<name>Strategy</name>
+	<groupId>com.source</groupId>
+	<artifactId>Observer_WeatherStationObserverable</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>Observer_WeatherStationObserverable</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
